# flocos-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
FlocosEngine/include/graphics/: graphics_engine.hpp  gui.hpp  index_buffer.hpp  texture.hpp
FlocosEngine/include/logging/: gl_error.hpp
FlocosEngine/src/: CMakeLists.txt
FlocosEngine/src/graphics/: graphics_engine.cpp  gui.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer_layout.cpp
FlocosEngine/src/logging/: gl_error.cpp
FlocosEngine/src/simulation/: ant.cpp  ant_heterodata.cpp  colony.cpp  colony_heterodata.cpp
FlocosEngine/src/tests/: test.cpp  test_ants.cpp  test_ants_heterodata.cpp  test_batch_render.cpp  test_clear_color.cpp  test_grid.cpp  test_texture.cpp
Sandbox/src/: Application.cpp  CMakeLists.txt
configuration/: imgui_conf.ini  logger-default.conf
include/graphics/: graphics_engine.hpp  gui.hpp  index_buffer.hpp  renderer.hpp  shader.hpp  stb_image.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
include/inputs/: inputs.hpp
include/logging/: gl_error.hpp
include/tests/: test.hpp
res/inputs/: 4_groups.txt
res/shaders/: color_quad_vf.shader  tex_quad_vf.shader  triangle.shader  triangle_vf.shader
src/: Application.cpp  main.cpp
src/graphics/: graphics_engine.cpp  gui.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  stb_image.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/inputs/: inputs.cpp
src/logging/: easylogging++.cpp  gl_error.cpp
src/tests/: test_clear_color.cpp  test_texture.cpp
(+11 files in other folders)
